--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./db-data/:/var/lib/postgresql/data/
+      - ./create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
