--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,8 @@
 sonar.projectKey=gateward_api
 sonar.organization=gateward
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=api
-#sonar.projectVersion=1.0
+sonar.sources=.
+sonar.exclusions=**/*_test.go
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
