--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,25 @@
-name: Build
+name: Go Tests
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.18.1
+    - uses: isbang/compose-action@v1.0.0
+      with:
+        compose-file: './docker-compose.yml'
+    - name: Test
+      run: go test -coverprofile=coverage.out -v ./... 
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
