--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,11 @@ jobs:
       with:
         compose-file: './docker-compose.yml'
     - name: Test
-      run: go test -coverprofile=coverage.out -v ./... 
+      run: go test -coverprofile=coverage.out -v ./...
+    - uses: actions/upload-artifact@master
+      with:
+        name: coverage
+        path: coverage.out
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
@@ -27,6 +31,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: actions/download-artifact@master
+        with:
+          name: coverage
+          path: coverage.out
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
