ci(artifcats): fix artifacts downloads

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
 sonar.coverageReportPaths=./coverage.out
+sonar.coverage.exclusions=**/*_test.go
