--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.exclusions=**/*_test.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
-sonar.coverageReportPaths=./coverage.out
+sonar.go.coverage.reportPaths=./coverage.out
 sonar.coverage.exclusions=**/*_test.go
