--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
 sonar.go.coverage.reportPaths=./coverage.out
-sonar.coverage.exclusions=**/*_test.go
+sonar.coverage.exclusions=**/*_test.go,main.go
