--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     ports:
       - "9999:9999"
     environment:
-      DATABASE_URL: "postgres://postgres:postgres@db:5432/postgres?sslmode=disable"
+      DATABASE_URL: "mysql:mysql@tcp(db:3306)/gateward"
       GOTRUE_JWT_SECRET: "weak-dev-secret"
       GOTRUE_JWT_EXP: 3600
-      GOTRUE_DB_DRIVER: postgres
+      GOTRUE_DB_DRIVER: mysql
       DB_NAMESPACE: auth
       API_EXTERNAL_URL: http://localhost
       GOTRUE_API_HOST: 0.0.0.0
@@ -25,12 +25,12 @@ services:
     restart: unless-stopped
 
   db:
-    image: postgres:latest
-    restart: unless-stopped
-    ports:
-      - "5432:5432"
+    image: mysql:latest
+    restart: always
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_PORT: 5432
+      MYSQL_DATABASE: 'gateward'
+      MYSQL_USER: 'mysql'
+      MYSQL_PASSWORD: 'mysql'
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      - '3306:3306'
